# Patterns

./: .gitignore  CMakeLists.txt  CMakeSettings.json
Include/Observer/: Observable.h  Observer.h
Include/Strategy/: Human.h  Weapon.h
Sources/: Main.cpp
Sources/Observer/: Observable.cpp  Observer.cpp
Sources/Strategy/: Human.cpp  Weapon.cpp
